# ecg-purkinje-npe

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.cli  Dockerfile.demo  LICENSE  Makefile  PLAN.md  README.md  REPRODUCE.md  SUBMISSION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
conduction_lens/: __init__.py  __main__.py  cli.py  config.py  geometry.py  pipeline.py
data/: README.md
docs/: README.md  architecture.md  built-with-claude.md  contracts.md  demo-page-brief.md  design-system.md  heart-viewer-spec.md  parallelization.md  related-work.md  research-brief-v5.md  research-brief.md  results-summary.md  scientific-process.md  sources-of-truth.md  status-day1.md  verification-ledger.md
docs/archive/: execution-plan.md  status-day1.md  video-script.md
docs/images/mermaid/: architecture-01.mmd  architecture-02.mmd  architecture-03.mmd  architecture-04.mmd  architecture-05.mmd
experiments/: calib_conformal.py  calib_fix.py  calib_probe.py  day1_forward_eval.py  day1_npe_smoke.py  day2_snapshot.py  emit_contract_b.py  emit_headline_checkpoint.py  emit_rerun.py  export_geometry.py  export_strocchi_purkinje.py  f3_contraction_vs_n.py  f5_endo_assess.py  f5_endo_repair.py  f5_iso.py  f5_uvc_tree.py  f6_gate.py  f7_determinism.py  f8_robustness.py  forward_fidelity.py  jacobian_fim.py  network_variation.py  ridge_confirm.py  strocchi_forward.py  wave_resweep.py
experiments/archive/: cv_myo_smoke.py  day1_prior_predictive.py
infra/: deploy.sh  github-actions.tf  main.tf
outputs/: crlb_comparison.json  f3_contraction_vs_n.json  hl_tarp_results.json  jacobian.json  jacobian_raw.npz
scripts/: new-agent-worktree.sh  view_strocchi_purkinje.py
scripts/git-hooks/: commit-msg
src/adapter/: __init__.py  strocchi.py
src/api/: __init__.py  app.py  artifact.py
src/calib/: __init__.py  conformal.py  diagnostics.py
src/core/: __init__.py  features.py  noise.py  theta.py
src/npe/: __init__.py  emit.py  persist.py
src/sim/: __init__.py  forward.py  sweep.py
technical-writeup/: CHECKLIST.md  Makefile  PROMOTION_NOTES.md  manuscript.md  refs.bib
technical-writeup/_pending/: groupA_fill_sheet.md
technical-writeup/figures/: fig1_contraction_spectrum.md  fig2_calibration.md  fig3_contraction_vs_N.md  fig4_crlb_features_vs_waveform.md
technical-writeup/ieee-paper/: README.md  paper.typ  vancouver.csl
technical-writeup/ieee-paper/scripts/: make_fig1.py  make_fig3_recolor.py  make_fig5.py  make_fig6.py  make_fig6_dark.py  make_fig7.py  make_figures.py  make_stacked.py  make_wide.py
tests/: conftest.py  test_adapter_strocchi.py  test_api.py  test_artifacts_parse.py  test_cli.py  test_conformal.py  test_core_features.py  test_core_noise.py  test_core_theta.py  test_forward_determinism.py  test_forward_determinism_strocchi.py  test_jacobian.py  test_npe_emit_structural.py  test_npe_persist.py  test_scaffold.py  test_tarp_conformal.py
ui/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
ui/mock/: README.md  contract_b.schema.json  gen-real.mjs  generate.mjs  geometry.json  geometry.strocchi.json  geometry.strocchi_02.json  results.json  results.real.json  results.strocchi.json  results.strocchi_02.json
ui/public/: llms.txt  robots.txt  sitemap.xml
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: ActivationMap.tsx  BrandHero.tsx  CalibrationPanel.tsx  CornerPlot.tsx  EcgOverlay.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  IdentifiabilitySpectrum.tsx  Layout.tsx  Pending.tsx  PinnedUnknowable.tsx  ProvenanceChip.tsx  Reproduce.tsx  WhatThisIsNot.tsx  WhatWeGotWrong.tsx  WhyItMatters.tsx
ui/src/lib/: artifact.ts  colormap.ts  liveArtifact.ts
