[project]
name = "ecg-purkinje-npe"
version = "0.1.0"
description = "Calibrated, amortized identifiability of Purkinje conduction from the surface ECG."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "ecg-purkinje-npe contributors" }]
dependencies = [
    "purkinje-uv",
    "myocardial-mesh",
    "sbi",
    "numpy",
    "matplotlib",
]

# Own libraries are vendored in-tree (packages/) and consumed editable, so our changes to
# them take effect live. purkinje-uv = fractal tree + Purkinje activation; myocardial-mesh =
# volumetric myocardial eikonal + 12-lead ECG; jaxbo = GP Bayesian-optimization baseline.
[tool.uv.sources]
purkinje-uv = { path = "packages/purkinje-uv", editable = true }
myocardial-mesh = { path = "packages/myocardial-mesh", editable = true }
jaxbo = { path = "packages/jax-bo", editable = true }

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
# Baseline validation (BO+ABC) is a Sat task and pulls jax/jaxlib/numpyro (heavy, and
# jaxlib is finicky on Windows). Kept out of the default sync; install on demand with
# `uv sync --group baseline` when the baseline work starts.
baseline = [
    "jaxbo",
]

# Research app, not a distributable package: uv manages the venv and deps but does
# not build/install this project. Source is on the path via pytest pythonpath below.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
