[project]
name = "ecg-purkinje-npe"
version = "0.1.0"
description = "Calibrated, amortized identifiability of Purkinje conduction from the surface ECG."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "ecg-purkinje-npe contributors" }]
dependencies = [
    "purkinje-uv",
    "myocardial-mesh",
    "sbi",
    "torch",
    "numpy",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "httpx",
]

[project.scripts]
conduction-lens = "conduction_lens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The proven science lives under src/ as flat top-level packages (core, sim, ...) and the CLI
# wrapper under conduction_lens/. Install them all top-level, NO namespace rename, so sbi's
# pickled posteriors keep resolving their import paths. src/foo installs as foo (hatchling strips
# the src/ prefix).
[tool.hatch.build.targets.wheel]
packages = [
    "conduction_lens",
    "src/core",
    "src/sim",
    "src/npe",
    "src/calib",
    "src/adapter",
    "src/api",
]

# Own libraries are vendored in-tree (packages/) and consumed editable, so our changes to
# them take effect live. purkinje-uv = fractal tree + Purkinje activation; myocardial-mesh =
# volumetric myocardial eikonal + 12-lead ECG; jaxbo = GP Bayesian-optimization baseline.
[tool.uv.sources]
purkinje-uv = { path = "packages/purkinje-uv", editable = true }
myocardial-mesh = { path = "packages/myocardial-mesh", editable = true }
jaxbo = { path = "packages/jax-bo", editable = true }
# CPU-only torch: the default wheels pull ~5 GB of nvidia CUDA deps into our CPU-only image (and
# hit a cudnn hash mismatch on Linux). Pin torch to the PyTorch CPU index for a lean, buildable image.
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
# Baseline validation (BO+ABC) is a Sat task and pulls jax/jaxlib/numpyro (heavy, and
# jaxlib is finicky on Windows). Kept out of the default sync; install on demand with
# `uv sync --group baseline` when the baseline work starts.
baseline = [
    "jaxbo",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "conduction_lens"]
# Vendored libraries, the ui/ demo, and the technical-writeup/ paper lane keep their own style/CI;
# not ours to lint.
extend-exclude = ["packages", "ui", "technical-writeup"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
